syntax = "proto3";

package name_service;

message EmptyReq {
}

message GetNameResp {
    string arg = 1;
}

message OnNameSetReq {
    string name = 1;
}

message SetNameReq {
    TransactOpts opts = 1;
    string name = 2;
}

message TransactOpts {
    string private_key = 1;
    int64 nonce = 2;
    int64 value = 3;
    int64 gas_price = 4;
    int64 gas_limit = 5;
}

message TransactionResp {
    string hash = 1;
}

service NameService {
    rpc getName(EmptyReq) returns (GetNameResp) {}
    rpc setName(SetNameReq) returns (TransactionResp) {}

    // Not support yet
    // rpc onNameSet(OnNameSetReq) returns (TransactionResp) {}
}
